[package]
name = "Raifus"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Reyes <sponkurtus098@gmail.com>"]
readme = "README.md"
homepage = "https://raifus-web.vercel.app/"
repository = "https://github.com/sponkurtus2/Raifus"
description = "A simple tool to view an Ascii waifu"
keywords = ["system", "cli"]
license = "MIT"

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
rand = "0.8.5"
term_size = "0.3"

[profile.release]
lto = true
codegen-units = 1
